Finished restyling of card area. Reorganized files.

--- a/index.html
+++ b/index.html
@@ -28,15 +28,19 @@
         <div class="player-area active-player-area">
           <div class="active-p-score">
             <span class="player-name">Player 1</span>
-            <span class="current-round-points">Round Points: 10</span>
-            <span class="total-score">Total Score: 100</span>
+            <span class="current-round-points">Round Points: 10000</span>
+            <span class="total-score">Total Score: 10000</span>
           </div>
         </div>
         <div class="card-area">
           <img src="card_assets/wiki commons card back.png" class="play-card" />
         </div>
         <div class="player-area waiting-player-area">
-          <div class="waiting-p-score">Player 2</div>
+          <div class="waiting-p-score">
+            <span class="player-name">Player 2</span>
+            <span class="current-round-points">Round Points: 10000</span>
+            <span class="total-score">Total Score: 10000</span>
+          </div>
         </div>
       </section>
       <img class="ofuda--1 hidden btn" id="ofuda--1" src="ofuda.png" />
@@ -270,7 +274,7 @@
       </div>
     </div>
     <div class="overlay hidden"></div>
-    <script src="script.js"></script>
+    <!-- <script src="script.js"></script> -->
   </body>
   <footer>
     <p class="copyright">Copyright Tai Arima ©2023</p>
